# spec_engineering

./: .gitignore  .mcp.json  .mcp.workflow.json  AGENTS.md  CLAUDE.md  PLANS.md  README.md  SPEC.md  VISION.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
acceptance-pipeline/ir/: atdd-interrogation-layer.json
acceptance-pipeline/roundtrip/: atdd-interrogation-layer.diff.txt
agents/: pipeline-builder.md  spec-guardian.md  test-generator.md
commands/: spec-check.md  spec-compile.md  spec-eng.md  spec-gaps.md  spec-graph.md  spec-interrogate.md
datasets/: repo_pairs_manifest.json  repo_pairs_split.json
docs/: CONVERGENCE_LOG.md  CONVERGENCE_PLAN.md
hooks/: hooks.json
hooks/scripts/: check-specs-exist.sh  stop-reminder.sh
reports/: approach_eval_20260218T051320Z.json  approach_eval_20260218T051320Z.md  approach_eval_20260218T051448Z.json  approach_eval_20260218T051448Z.md  approach_eval_20260218T053155Z.json  approach_eval_20260218T053155Z.md  convergence_sploithunter_20260218T042448Z.json  convergence_sploithunter_20260218T042448Z.md
scripts/: build_repo_dataset.py  eval_semantic_approaches.py  repo_convergence_eval.py  split_repo_dataset.py
skills/spec-eng/: SKILL.md
specs/: atdd-dual-spec-mode.dal  atdd-dual-spec-mode.txt  atdd-interrogation-layer.dal  atdd-interrogation-layer.txt  atdd-interrogation-layer.txt.canonical  vocab.yaml
src/spec_eng/: __init__.py  ai.py  cli.py  config.py  dual_spec.py  gaps.py  generator.py  graph.py  guardian.py  interrogation.py  mcp_server.py  models.py  parser.py  runner.py  (+3 more)
tests/: conftest.py
(+41 files in other folders)
