[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spec-eng"
version = "0.1.0"
description = "Spec Engineering: progressive refinement from intent to verified behavioral specifications"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "networkx>=3.1",
    "rich>=13.0",
    "anthropic>=0.39",
    "fastmcp>=2.0",
]

[project.scripts]
spec-eng = "spec_eng.cli:cli"
spec-eng-mcp = "spec_eng.mcp_server:mcp.run"
spec-eng-workflow-mcp = "spec_eng.workflow_mcp:mcp.run"
spec-eng-web = "spec_eng.web_api:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-networkx>=3.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "acceptance: GWT acceptance tests from SPEC.md",
    "e2e: end-to-end pipeline tests",
    "slow: tests that take significant time",
    "ai: tests requiring AI integration (mocked by default)",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src"
packages = ["spec_eng"]

[tool.hatch.build.targets.wheel]
packages = ["src/spec_eng"]
